img biobio nueva

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 distintas
                 estrategias, tales como: </p>
             <div class="pt-5">
-                <img src="./assets/img/camaraHome.png" alt="Imagen de una cámara de fotos" class="img-camara m-3">
+                <img src="./assets/img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
             </div>
         </div>
         <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/img/biobio-small-comp.png" alt="Panorama del río Bío-Bío" id="rio-biobio">
+            <img src="./assets/img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
             <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
                 mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
                 que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
@@ -82,10 +82,10 @@
                 orillas del Río Bío Bío, Chile.</p>
             <p class="mb-5">Gracias :)</p>
             <div class="galeria-home text-center mb-5">
-                <img src="./assets/img/mariposa.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/otonio.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Parcela Castañares">
-                <img src="./assets/img/flor.svg" class="campo-img" alt="Parcela Castañares">
+                <img src="./assets/img/mariposa.svg" class="campo-img" alt="Mariposa">
+                <img src="./assets/img/otonio.svg" class="campo-img" alt="Otoño">
+                <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Caqui">
+                <img src="./assets/img/flor.svg" class="campo-img" alt="Flor">
             </div>
         </section>
     </section>
@@ -93,10 +93,10 @@
         <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
             diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
         <div class="col-7 m-5 ps-5">
-            <img src="./assets/img/mariposa.svg" class="campo-img" alt="Parcela Castañares">
-            <img src="./assets/img/otonio.svg" class="campo-img" alt="Parcela Castañares">
-            <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Parcela Castañares">
-            <img src="./assets/img/flor.svg" class="campo-img" alt="Parcela Castañares">
+            <img src="./assets/img/mariposa.svg" class="campo-img" alt="Mariposa">
+            <img src="./assets/img/otonio.svg" class="campo-img" alt="Otoño">
+            <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Caqui">
+            <img src="./assets/img/flor.svg" class="campo-img" alt="Flor">
         </div>
     </section>
     </main>
