--- a/jobs.html
+++ b/jobs.html
@@ -43,7 +43,7 @@
   <main class="mb-5">
     <header class="pb-0 pt-5">
       <div style="position: relative;">
-        <img src="./assets/Img/caquis-footer.svg" alt="Caquis de mi Jardín" class="w-100">
+        <img src="./assets/Img/caquis-footer.svg" alt="Caquis" class="w-100">
       </div>
       <div class="texto-gibran">
         <h4 class="texto-hero-jobs m-3">"Amar a la vida a través del trabajo, es intimar con <br> el más recóndito
@@ -57,7 +57,7 @@
     <section class="work-cards justify-content-center">
       <div id="card-jobs" class="card">
         <div class="image-container">
-          <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
+          <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Entornasol">
         </div>
         <h3 class="card-title">Diseñadora Web / Gestión de Contenidos</h3>
         <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
@@ -69,7 +69,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://galope.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-galope.png" alt="Web Agencia Galope"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-galope.png" alt="Web Galope"></a>
         </div>
         <div>
           <h3 class="card-title">Creación y Gestión de Contenidos</h3>
