--- a/proyects.html
+++ b/proyects.html
@@ -235,21 +235,21 @@
               target="_blank" rel="noopener noreferrer">
               <p>http://nosotros6.github.io/anexos-estudio-2023/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Apoyo digital Estudio IDMA" loading="lazy" width="100%" height="500" ;
               src="./assets/img/idma.png" />
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
-            <h3 class="proyects-title text-center mt-2 mb-5">Web Portafolio Front End</h3>
+            <h3 class="proyects-title text-center mt-2 mb-5">Mi Primer Portafolio Web</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
               target="_blank" rel="noopener noreferrer">
               <p>https://github.com/nosotros6?tab=repositories</p>
             </a>
-            <span class="text-secondary">Ver la web aquí:</span><a href="https://nosotros6.github.io/portafolio/"
+            <span class="text-secondary">Ver la web aquí:</span><a href="https://nosotros6.github.io/cv-pili/"
               target="_blank" rel="noopener noreferrer">
-              <p>https://nosotros6.github.io/portafolio/</p>
+              <p>https://nosotros6.github.io/cv-pili/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ;
               src="./assets/img/portafolio.png" />
           </section>
           <section class="container my" data-aos="fade-up">
@@ -263,7 +263,7 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/Animales-Salvajes/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Proyecto Animales Salvajes" loading="lazy" width="100%" height="500" ;
               src="./assets/img/animales.png" />
           </section>
           <section class="container my-5" data-aos="fade-up">
@@ -277,7 +277,7 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/cursos-alfaweb/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Proyecto Alfa Web" loading="lazy" width="100%" height="500" ;
               src="./assets/img/alfa-web.png" />
           </section>
           <section class="container my-5" data-aos="fade-up">
@@ -291,7 +291,7 @@
               href="https://nosotros6.github.io/ricomida-designer-ux-ui/" target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Proyecto Ricomida" loading="lazy" width="100%" height="500" ;
               src="./assets/img/ricomida.png" />
           </section>
           <section class="container my-5" data-aos="fade-up">
@@ -305,7 +305,7 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/desafio-td-ux/</p>
             </a>
-            <img alt="Portafolio Front End de Pilar García" loading="lazy" width="100%" height="500" ;
+            <img alt="Examen Front End" loading="lazy" width="100%" height="500" ;
               src="./assets/img/landing-examen-td.png" />
           </section>
         </div>
@@ -321,7 +321,7 @@
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
-            <img src="./assets/Img/afiche.png" width="100%" height="500"></img>
+            <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche"></img>
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
@@ -339,7 +339,7 @@
             <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
               Bosque Nativo en las regiones del Bío Bío, Los Ríos y Los Lagos, para el Instituto del Medio Ambiente, año
               2023. </p>
-            <img src="./assets/Img/idma-corfo.png" width="100%" height="500"></img>
+            <img src="./assets/Img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA"></img>
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Asesoría en Gestión de Contenidos para Fundación
@@ -357,7 +357,7 @@
               href="https://www.youtube.com/watch?v=GGg-fEHd4Os&t=142s" target="_blank" rel="noopener noreferrer">
               <p>Travesía, Historia de Concepción, capítulo 1</p>
             </a>
-            <img src="./assets/Img/travesia.png" width="100%" height="500"></img>
+            <img src="./assets/Img/travesia.png" width="100%" height="500" alt="Travesía"></img>
           </section>
         </div>
 
