--- a/studies.html
+++ b/studies.html
@@ -50,7 +50,7 @@
         <section class="card-grid m-5">
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
+              <img src="./assets/Img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
             </div>
             <h3 class="card-title">Diseñador UX/UI</h3>
             <h4 class="card-subtitle">Talento Digital Chile</h4>
@@ -61,7 +61,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/ux-google.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
+              <img src="./assets/Img/ux-google.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
             </div>
             <h3 class="card-title">Diseño de Experiencia de Usuario</h3>
             <h4 class="card-subtitle">Google Inc.</h4>
@@ -74,7 +74,7 @@
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/content-manager.png" class="card-img-top w-50 m-5"
-                alt="Insignia de Front End Trainee">
+                alt="Insignia Content Manager">
             </div>
             <h3 class="card-title">Content Manager</h3>
             <h4 class="card-subtitle">Talento Digital Chile</h4>
@@ -85,7 +85,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/front-end.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
+              <img src="./assets/Img/front-end.png" class="card-img-top w-50 m-5" alt="Insignia de Front End">
             </div>
             <h3 class="card-title">Front End Trainee</h3>
             <h4 class="card-subtitle">Talento Digital Chile / Edutecno</h4>
@@ -97,7 +97,7 @@
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/redes-sociales.png" class="card-img-top w-50 m-5"
-                alt="Certificado Estrategias de Ventas en Redes Sociales">
+                alt="Certificado Redes Sociales">
             </div>
             <h3 class="card-title">Estrategias de Ventas en Redes Sociales</h3>
             <h4 class="card-subtitle">Fundación Simón de Cirene y Sence</h4>
@@ -109,7 +109,7 @@
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/tecnicas-gestion.png" class="card-img-top w-50 m-5"
-                alt="Certificado Estrategias de Ventas en Redes Sociales">
+                alt="Certificado Técnicas Gestión">
             </div>
             <h3 class="card-title">Técnicas de Gestión de Planes de Acción y Modelos de Negocio</h3>
             <h4 class="card-subtitle">Fundación Simón de Cirene y Sence</h4>
@@ -121,7 +121,7 @@
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/desarrollo-web.png" class="card-img-top w-50 m-5"
-                alt="Certificado Desarrollo Web para Emprendimientos">
+                alt="Certificado Desarrollo Web">
             </div>
             <h3 class="card-title">Emprendimiento Digital con Tecnología Web</h3>
             <h4 class="card-subtitle">Le Wagon / STEC</h4>
@@ -132,7 +132,7 @@
 
           <div class="card">
             <div class="image-container my-5 pb-4">
-              <img src="./assets/Img/ubb.png" class="card-img-top w-50 m-5" alt="Certificado de título de Periodista">
+              <img src="./assets/Img/ubb.png" class="card-img-top w-50 m-5" alt="Universidad del Bío-Bío">
             </div>
             <h3 class="card-title">Diplomado de Marketing</h3>
             <h4 class="card-subtitle">Universidad del Bío-Bío / Facultad de Ciencias Empresariales</h4>
@@ -145,7 +145,7 @@
           <div class="card">
             <div class="image-container">
               <img src="./assets/Img/periodismo.png" class="card-img-top w-50 m-5"
-                alt="Certificado de título de Periodista">
+                alt="Certificado de Periodista">
             </div>
             <h3 class="card-title">Periodismo y Comunicación Social</h3>
             <h4 class="card-subtitle">Universidad de Chile</h4>
