cambio navbar sin js

--- a/jobs.html
+++ b/jobs.html
@@ -22,23 +22,27 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-        <img src="./assets/Img/logo-pili.svg" alt="Logo" class="logo" />
-        <span class="tooltip">INICIO</span>
-        <span class="navbar-text text-white">Pilar García Royo</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-list navbar-nav ms-auto">
-          <!-- Los elementos <li> y <a> han sido eliminados en el HTML -->
-        </ul>
-      </div>
+    <div class="logo-container container-fluid">
+        <a class="navbar-brand" href="index.html">
+            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+            <span class="navbar-text text-white ms-3">Pilar García Royo</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-list navbar-nav ms-auto">
+                <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
+                        href="index.html">Inicio</a>
+                </li>
+                <li class="navbar-item me-5"><a class="text-decoration-none" href="proyects.html">Proyectos</a></li>
+                <li class="navbar-item me-5"><a class="text-decoration-none" href="studies.html">Estudios</a></li>
+                <li class="navbar-item me-5"><a class="text-decoration-none" href="jobs.html">Trabajos</a></li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
   <main class="mb-5">
     <header class="pb-0 pt-5">
