--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 </head>
 
 <body>
-    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
+        <div class="logo-container container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/Img/logo-pili.svg" alt="Logo" class="logo" />
-                <span class="tooltip">INICIO</span>
-                <span class="navbar-text text-white">Pilar García Royo</span>
+                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+                <span class="navbar-text text-white ms-3">Pilar García Royo</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,12 +33,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-list navbar-nav ms-auto">
-                    <!-- Los elementos <li> y <a> han sido eliminados en el HTML -->
+                    <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
+                            href="index.html">Inicio</a>
+                    </li>
+                    <li class="navbar-item me-5"><a class="text-decoration-none" href="proyects.html">Proyectos</a></li>
+                    <li class="navbar-item me-5"><a class="text-decoration-none" href="studies.html">Estudios</a></li>
+                    <li class="navbar-item me-5"><a class="text-decoration-none" href="jobs.html">Trabajos</a></li>
                 </ul>
             </div>
         </div>
     </nav>
- 
+
     <section class="my-5 pt-5">
         <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
         <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
