cambio nombres enlaces de img

--- a/proyects.html
+++ b/proyects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
   <title>Pilar García Royo</title>
   <meta name="author" content="Pilar García Royo" />
   <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+            <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
             <span class="navbar-text text-white ms-3">Pilar García Royo</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,6 +45,8 @@
 </nav>
   <main class="pt-5 my-5">
     <section class="pt-5">
+      <h2 class="proyects-subtitle m-5 pt-5">OPCIONES DE SELECCIÓN SEGÚN EL ÁREA</h2>
+
       <ul class="nav nav-pills mb-3 ms-5" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
@@ -325,7 +327,7 @@
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
-            <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche"></img>
+            <img src="./assets/img/afiche.png" width="100%" height="500" alt="Afiche"></img>
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
@@ -343,7 +345,7 @@
             <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
               Bosque Nativo en las regiones del Bío Bío, Los Ríos y Los Lagos, para el Instituto del Medio Ambiente, año
               2023. </p>
-            <img src="./assets/Img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA"></img>
+            <img src="./assets/img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA"></img>
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Asesoría en Gestión de Contenidos para Fundación
@@ -361,7 +363,7 @@
               href="https://www.youtube.com/watch?v=GGg-fEHd4Os&t=142s" target="_blank" rel="noopener noreferrer">
               <p>Travesía, Historia de Concepción, capítulo 1</p>
             </a>
-            <img src="./assets/Img/travesia.png" width="100%" height="500" alt="Travesía"></img>
+            <img src="./assets/img/travesia.png" width="100%" height="500" alt="Travesía"></img>
           </section>
         </div>
 
