--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="logo-container container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+                <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
                 <span class="navbar-text text-white ms-3">Pilar García Royo</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
