--- a/studies.html
+++ b/studies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
   <title>Pilar García Royo</title>
   <meta name="author" content="Pilar García Royo" />
   <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+            <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
             <span class="navbar-text text-white ms-3">Pilar García Royo</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,7 +54,7 @@
         <section class="card-grid m-5">
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
+              <img src="./assets/img/ux-ui.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
             </div>
             <h3 class="card-title">Diseñador UX/UI</h3>
             <h4 class="card-subtitle">Talento Digital Chile</h4>
@@ -65,7 +65,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/ux-google.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
+              <img src="./assets/img/ux-google.png" class="card-img-top w-50 m-5" alt="Insignia Diseño UX/UI">
             </div>
             <h3 class="card-title">Diseño de Experiencia de Usuario</h3>
             <h4 class="card-subtitle">Google Inc.</h4>
@@ -77,7 +77,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/content-manager.png" class="card-img-top w-50 m-5"
+              <img src="./assets/img/content-manager.png" class="card-img-top w-50 m-5"
                 alt="Insignia Content Manager">
             </div>
             <h3 class="card-title">Content Manager</h3>
@@ -89,7 +89,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/front-end.png" class="card-img-top w-50 m-5" alt="Insignia de Front End">
+              <img src="./assets/img/front-end.png" class="card-img-top w-50 m-5" alt="Insignia de Front End">
             </div>
             <h3 class="card-title">Front End Trainee</h3>
             <h4 class="card-subtitle">Talento Digital Chile / Edutecno</h4>
@@ -100,7 +100,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/redes-sociales.png" class="card-img-top w-50 m-5"
+              <img src="./assets/img/redes-sociales.png" class="card-img-top w-50 m-5"
                 alt="Certificado Redes Sociales">
             </div>
             <h3 class="card-title">Estrategias de Ventas en Redes Sociales</h3>
@@ -112,7 +112,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/tecnicas-gestion.png" class="card-img-top w-50 m-5"
+              <img src="./assets/img/tecnicas-gestion.png" class="card-img-top w-50 m-5"
                 alt="Certificado Técnicas Gestión">
             </div>
             <h3 class="card-title">Técnicas de Gestión de Planes de Acción y Modelos de Negocio</h3>
@@ -124,7 +124,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/desarrollo-web.png" class="card-img-top w-50 m-5"
+              <img src="./assets/img/desarrollo-web.png" class="card-img-top w-50 m-5"
                 alt="Certificado Desarrollo Web">
             </div>
             <h3 class="card-title">Emprendimiento Digital con Tecnología Web</h3>
@@ -136,7 +136,7 @@
 
           <div class="card">
             <div class="image-container my-5 pb-4">
-              <img src="./assets/Img/ubb.png" class="card-img-top w-50 m-5" alt="Universidad del Bío-Bío">
+              <img src="./assets/img/ubb.png" class="card-img-top w-50 m-5" alt="Universidad del Bío-Bío">
             </div>
             <h3 class="card-title">Diplomado de Marketing</h3>
             <h4 class="card-subtitle">Universidad del Bío-Bío / Facultad de Ciencias Empresariales</h4>
@@ -148,7 +148,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/periodismo.png" class="card-img-top w-50 m-5"
+              <img src="./assets/img/periodismo.png" class="card-img-top w-50 m-5"
                 alt="Certificado de Periodista">
             </div>
             <h3 class="card-title">Periodismo y Comunicación Social</h3>
@@ -170,7 +170,7 @@
       </section>
     </section>
     <section class="img-skills">
-      <img src="./assets/Img/img-kills.png" alt="Niña corriendo" id="ninia-skills">
+      <img src="./assets/img/img-kills.png" alt="Niña corriendo" id="ninia-skills">
     </section>
     <section class="row final-studies">
       <h4 class="col-5 texto-final-studies m-5">"Tus talentos y habilidades irán mejorando con
