--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="assets/img/logo-pili.svg" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
     <title>Pilar García Royo</title>
-    <meta name="author" content="Pilar García Royo" />
-    <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
-    <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI" />
+    <meta name="author" content="Pilar García Royo">
+    <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+    <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,14 +17,14 @@
     <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./dist/style.css" />
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="logo-container container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
                 <span class="navbar-text text-white ms-3">Pilar García Royo</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -71,11 +71,11 @@
                 distintas
                 estrategias, tales como: </p>
             <div class="pt-5">
-                <img src="./assets/img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
+                <img src="./assets/Img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
             </div>
         </div>
         <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
+            <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
             <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
                 mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
                 que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
@@ -85,10 +85,10 @@
                 orillas del Río Bío Bío, Chile.</p>
             <p class="mb-5">Gracias :)</p>
             <div class="galeria-home text-center mb-5">
-                <img src="./assets/img/mariposa.svg" class="campo-img" alt="Mariposa">
-                <img src="./assets/img/otonio.svg" class="campo-img" alt="Otoño">
-                <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Caqui">
-                <img src="./assets/img/flor.svg" class="campo-img" alt="Flor">
+                <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
+                <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
+                <img src="./assets/Img/caqui-arbol.svg" class="campo-img" alt="Caqui">
+                <img src="./assets/Img/flor.svg" class="campo-img" alt="Flor">
             </div>
         </section>
     </section>
@@ -96,10 +96,10 @@
         <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
             diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
         <div class="col-7 m-5 ps-5">
-            <img src="./assets/img/mariposa.svg" class="campo-img" alt="Mariposa">
-            <img src="./assets/img/otonio.svg" class="campo-img" alt="Otoño">
-            <img src="./assets/img/caqui-arbol.svg" class="campo-img" alt="Caqui">
-            <img src="./assets/img/flor.svg" class="campo-img" alt="Flor">
+            <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
+            <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
+            <img src="./assets/Img/caqui-arbol.svg" class="campo-img" alt="Caqui">
+            <img src="./assets/Img/flor.svg" class="campo-img" alt="Flor">
         </div>
     </section>
     </main>
