--- a/jobs.html
+++ b/jobs.html
@@ -2,13 +2,13 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg">
   <title>Pilar García Royo</title>
-  <meta name="author" content="Pilar García Royo" />
-  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
-  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI" />
+  <meta name="author" content="Pilar García Royo">
+  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,14 +17,14 @@
   <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/style.css" />
+  <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
             <span class="navbar-text text-white ms-3">Pilar García Royo</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -47,7 +47,7 @@
   <main class="mb-5">
     <header class="pb-0 pt-5">
       <div style="position: relative;">
-        <img src="./assets/img/caquis-footer.svg" alt="Caquis" class="w-100">
+        <img src="./assets/Img/caquis-footer.svg" alt="Caquis" class="w-100">
       </div>
       <div class="texto-gibran">
         <h4 class="texto-hero-jobs m-3">"Amar a la vida a través del trabajo, es intimar con <br> el más recóndito
@@ -61,7 +61,7 @@
     <section class="work-cards justify-content-center">
       <div id="card-jobs" class="card">
         <div class="image-container">
-          <img src="./assets/img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Entornasol">
+          <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Entornasol">
         </div>
         <h3 class="card-title">Diseñadora Web / Gestión de Contenidos</h3>
         <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
@@ -73,7 +73,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://galope.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/img/logo-galope.png" alt="Web Galope"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-galope.png" alt="Web Galope"></a>
         </div>
         <div>
           <h3 class="card-title">Creación y Gestión de Contenidos</h3>
@@ -88,7 +88,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://edutecno.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/img/logo-edutecno.png" alt="Web Edutecno"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-edutecno.png" alt="Web Edutecno"></a>
         </div>
         <h3 class="card-title">Asistente de tutor</h3>
         <h4 class="card-subtitle">Edutecno</h4>
@@ -100,7 +100,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://toolmania.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/img/logo-toolmania.png" alt="Web Toolmania"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-toolmania.png" alt="Web Toolmania"></a>
         </div>
         <h3 class="card-title">Front End Developer/Diseño Ui</h3>
         <h4 class="card-subtitle">Toolmanía SpA</h4>
@@ -113,7 +113,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/img/logo-avianet.png" alt="Web Avianet"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-avianet.png" alt="Web Avianet"></a>
         </div>
         <h3 class="card-title">Asesora web</h3>
         <h4 class="card-subtitle">Avianet SpA</h4>
@@ -125,7 +125,7 @@
       <div id="card-jobs" class="card">
         <div class="image-container">
           <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
+            <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
         </div>
         <h3 class="card-title">Periodista</h3>
         <h4 class="card-subtitle">Corporación Cultural Teatro Pencopolitano</h4>
