--- a/proyects.html
+++ b/proyects.html
@@ -2,13 +2,13 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/img/logo-pili.svg" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="./assets/Img/logo-pili.svg">
   <title>Pilar García Royo</title>
-  <meta name="author" content="Pilar García Royo" />
-  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui" />
-  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI" />
+  <meta name="author" content="Pilar García Royo">
+  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,14 +17,14 @@
   <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/style.css" />
+  <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="assets/img/logo-pili.svg" alt="Logo de usuario" class="logo" />
+            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
             <span class="navbar-text text-white ms-3">Pilar García Royo</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -220,14 +220,14 @@
               rel="noopener noreferrer">
               <p class="ms-5 mb-5">http://toolmania.cl/</p>
             </a>
-            <img alt="Toolmania" loading="lazy" width="100%" height="500" ; src="./assets/img/web-toolmania.png" />
+            <img alt="Toolmania" loading="lazy" width="100%" height="500" ; src="./assets/Img/web-toolmania.png">
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">One Stock: programa de logística Nodriza SpA</h3>
             <div class="containerImgOneStock">
-              <img alt="One Stock parte 1" loading="lazy" width="100%" height="500" src="./assets/img/OneStock1.png" />
-              <img alt="One Stock parte 2" loading="lazy" width="100%" height="500" src="./assets/img/OneStock2.png" />
+              <img alt="One Stock parte 1" loading="lazy" width="100%" height="500" src="./assets/Img/OneStock1.png">
+              <img alt="One Stock parte 2" loading="lazy" width="100%" height="500" src="./assets/Img/OneStock2.png">
             </div>
           </section>
           <section class="container my-5" data-aos="fade-up">
@@ -242,7 +242,7 @@
               <p>http://nosotros6.github.io/anexos-estudio-2023/</p>
             </a>
             <img alt="Apoyo digital Estudio IDMA" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/idma.png" />
+              src="./assets/Img/idma.png">
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
@@ -256,7 +256,7 @@
               <p>https://nosotros6.github.io/cv-pili/</p>
             </a>
             <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/portafolio.png" />
+              src="./assets/Img/portafolio.png">
           </section>
           <section class="container my" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
@@ -270,7 +270,7 @@
               <p>https://nosotros6.github.io/Animales-Salvajes/</p>
             </a>
             <img alt="Proyecto Animales Salvajes" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/animales.png" />
+              src="./assets/Img/animales.png">
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
@@ -284,7 +284,7 @@
               <p>https://nosotros6.github.io/cursos-alfaweb/</p>
             </a>
             <img alt="Proyecto Alfa Web" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/alfa-web.png" />
+              src="./assets/Img/alfa-web.png">
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
@@ -298,7 +298,7 @@
               <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
             </a>
             <img alt="Proyecto Ricomida" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/ricomida.png" />
+              src="./assets/Img/ricomida.png">
           </section>
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Examen Certificación TD</h6>
@@ -312,7 +312,7 @@
               <p>https://nosotros6.github.io/desafio-td-ux/</p>
             </a>
             <img alt="Examen Front End" loading="lazy" width="100%" height="500" ;
-              src="./assets/img/landing-examen-td.png" />
+              src="./assets/Img/landing-examen-td.png">
           </section>
         </div>
 
@@ -327,7 +327,7 @@
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
-            <img src="./assets/img/afiche.png" width="100%" height="500" alt="Afiche"></img>
+            <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche">
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
@@ -345,7 +345,7 @@
             <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
               Bosque Nativo en las regiones del Bío Bío, Los Ríos y Los Lagos, para el Instituto del Medio Ambiente, año
               2023. </p>
-            <img src="./assets/img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA"></img>
+              <img src="./assets/Img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA">
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Asesoría en Gestión de Contenidos para Fundación
@@ -363,7 +363,7 @@
               href="https://www.youtube.com/watch?v=GGg-fEHd4Os&t=142s" target="_blank" rel="noopener noreferrer">
               <p>Travesía, Historia de Concepción, capítulo 1</p>
             </a>
-            <img src="./assets/img/travesia.png" width="100%" height="500" alt="Travesía"></img>
+            <img src="./assets/Img/travesia.png" width="100%" height="500" alt="Travesía">
           </section>
         </div>
 
