--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                <ul id="menu" class="navbar-list navbar-nav ms-auto">
+                    <!-- Las etiquetas <li> se agregarán aquí dinámicamente -->
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="logo-container container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
+                <span class="navbar-text text-white ms-3">Pilar García Royo</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-list navbar-nav ms-auto">
                     <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
                             href="index.html">Inicio</a>
@@ -42,7 +60,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <section class="my-5 pt-5">
         <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
