media query para proyects

--- a/index.html
+++ b/index.html
@@ -25,43 +25,25 @@
         <div class="logo-container container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-                <span class="navbar-text text-white ms-3">Pilar García Royo</span>
+                <span class="navbar-text text-white ms-3">Pilar García</span>
+                <span class="ms-1 text-secondary">>></span>
             </a>
+            <nav aria-label="breadcrumb" class="mt-3">
+                <ol id="breadcrumbInicio" class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+                </ol>
+              </nav>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul id="menu" class="navbar-list navbar-nav ms-auto">
-                    <!-- Las etiquetas <li> se agregarán aquí dinámicamente -->
                 </ul>
             </div>
         </div>
     </nav>
     
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="logo-container container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-                <span class="navbar-text text-white ms-3">Pilar García Royo</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-list navbar-nav ms-auto">
-                    <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
-                            href="index.html">Inicio</a>
-                    </li>
-                    <li class="navbar-item me-5"><a class="text-decoration-none" href="proyects.html">Proyectos</a></li>
-                    <li class="navbar-item me-5"><a class="text-decoration-none" href="studies.html">Estudios</a></li>
-                    <li class="navbar-item me-5"><a class="text-decoration-none" href="jobs.html">Trabajos</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav> -->
-
     <section class="my-5 pt-5">
         <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
         <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
