--- a/proyects.html
+++ b/proyects.html
@@ -23,29 +23,29 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-            <span class="navbar-text text-white ms-3">Pilar García Royo</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-list navbar-nav ms-auto">
-                <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
-                        href="index.html">Inicio</a>
-                </li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="proyects.html">Proyectos</a></li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="studies.html">Estudios</a></li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="jobs.html">Trabajos</a></li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
+        <span class="navbar-text text-white ms-3">Pilar García</span>
+        <span class="ms-1 text-secondary">>></span>
+      </a>
+      <nav aria-label="breadcrumb" class="mt-3">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Proyectos</li>
+        </ol>
+      </nav>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul id="menu" class="navbar-list navbar-nav ms-auto">
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
   <main class="pt-5 my-5">
-    <section class="pt-5">
-      <h2 class="proyects-subtitle m-5 pt-5">OPCIONES DE SELECCIÓN SEGÚN EL ÁREA</h2>
+    <section class="pt-3">
+      <h2 class="proyects-tabs-subtitle m-5">SELECCIONE EL ÁREA LABORAL</h2>
 
       <ul class="nav nav-pills mb-3 ms-5" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -69,7 +69,7 @@
       <div class="tab-content pt-5" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
           <div class="tab-content" id="pills-tabContent">
-            <h2 class="proyects-title text-center mt-5 mb-5 pb-5">SELECCIÓN DE PROYECTOS EN DISEÑO UX / UI</h2>
+            <h2 class="proyects-title text-center mt-5 mb-5 pb-5">PROYECTOS EN DISEÑO UX/UI POR CATEGORÍA</h2>
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <section data-aos="fade-up" class="m-5 pb-3">
                 <!-- 1er tabs UI-->
@@ -207,12 +207,8 @@
             </div>
           </div>
         </div>
-
-
         <!-- INICIO CUERPO DE 2do TABS PROGRAMACION-->
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <h2 class="proyects-title text-center mt-5 mb-5 pb-5">SELECCIÓN DE PROYECTOS EN DESARROLLO FRONT END</h2>
-
           <section class="container my-5" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Programación de e-commerce</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Toolmania: Header y Checkout</h3>
@@ -255,8 +251,34 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/cv-pili/</p>
             </a>
-            <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ;
-              src="./assets/Img/portafolio.png">
+            <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ; src="./assets/Img/portafolio.png">
+          </section>
+          <section class="container my-5" data-aos="fade-up">
+            <h6 class="proyects-subtitle text-center mt-5">Examen Certificación TD</h6>
+            <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Adopta una Mascota</h3>
+            <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
+              target="_blank" rel="noopener noreferrer">
+              <p>https://github.com/nosotros6?tab=repositories</p>
+            </a>
+            <span class="text-secondary">Ver la web aquí:</span><a href="https://nosotros6.github.io/desafio-td-ux/"
+              target="_blank" rel="noopener noreferrer">
+              <p>https://nosotros6.github.io/desafio-td-ux/</p>
+            </a>
+            <img alt="Examen Front End" loading="lazy" width="100%" height="500" ;
+              src="./assets/Img/landing-examen-td.png">
+          </section>
+          <section class="container my-5" data-aos="fade-up">
+            <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
+            <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Ricomida</h3>
+            <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
+              target="_blank" rel="noopener noreferrer">
+              <p>https://github.com/nosotros6?tab=repositories</p>
+            </a>
+            <span class="text-secondary">Ver la web aquí:</span><a
+              href="https://nosotros6.github.io/ricomida-designer-ux-ui/" target="_blank" rel="noopener noreferrer">
+              <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
+            </a>
+            <img alt="Proyecto Ricomida" loading="lazy" width="100%" height="500" ; src="./assets/Img/ricomida.png">
           </section>
           <section class="container my" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
@@ -283,69 +305,15 @@
               target="_blank" rel="noopener noreferrer">
               <p>https://nosotros6.github.io/cursos-alfaweb/</p>
             </a>
-            <img alt="Proyecto Alfa Web" loading="lazy" width="100%" height="500" ;
-              src="./assets/Img/alfa-web.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
-            <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
-            <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Ricomida</h3>
-            <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
-              target="_blank" rel="noopener noreferrer">
-              <p>https://github.com/nosotros6?tab=repositories</p>
-            </a>
-            <span class="text-secondary">Ver la web aquí:</span><a
-              href="https://nosotros6.github.io/ricomida-designer-ux-ui/" target="_blank" rel="noopener noreferrer">
-              <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
-            </a>
-            <img alt="Proyecto Ricomida" loading="lazy" width="100%" height="500" ;
-              src="./assets/Img/ricomida.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
-            <h6 class="proyects-subtitle text-center mt-5">Examen Certificación TD</h6>
-            <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Adopta una Mascota</h3>
-            <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
-              target="_blank" rel="noopener noreferrer">
-              <p>https://github.com/nosotros6?tab=repositories</p>
-            </a>
-            <span class="text-secondary">Ver la web aquí:</span><a href="https://nosotros6.github.io/desafio-td-ux/"
-              target="_blank" rel="noopener noreferrer">
-              <p>https://nosotros6.github.io/desafio-td-ux/</p>
-            </a>
-            <img alt="Examen Front End" loading="lazy" width="100%" height="500" ;
-              src="./assets/Img/landing-examen-td.png">
+            <img alt="Proyecto Alfa Web" loading="lazy" width="100%" height="500" ; src="./assets/Img/alfa-web.png">
           </section>
         </div>
 
         <!-- INICIO CUERPO DE 3er TABS -->
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-          <h2 class="proyects-title text-center mt-5 mb-5 pb-5">SELECCIÓN DE PROYECTOS EN GESTIÓN Y CREACIÓN DE
-            CONTENIDOS</h2>
-
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Boletines Mensuales y Guiones para empresas</h3>
             <iframe src="./assets/pdf/acop-boletin.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
-            <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
-            <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche">
-          </section>
-          <section class="container" data-aos="fade-up">
-            <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
-            <iframe src="./assets/pdf/whatsapp.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
-            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Proyecto Content Manager / 2022</h3>
-            <p class="m-5">Examen para la certificación de Content Manager, bootcamp Corfo y Talento Digital Chile
-              (2022)</p>
-            <iframe src="./assets/pdf/content-manager.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
-            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Estudio de Mercado para Instituto del Medio Ambiente
-            </h3>
-            <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
-              Bosque Nativo en las regiones del Bío Bío, Los Ríos y Los Lagos, para el Instituto del Medio Ambiente, año
-              2023. </p>
-              <img src="./assets/Img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA">
           </section>
           <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Asesoría en Gestión de Contenidos para Fundación
@@ -356,6 +324,20 @@
             <iframe src="./assets/pdf/yoga-entornasol.pdf" width="100%" height="500"></iframe>
           </section>
           <section class="container" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Proyecto Content Manager / 2022</h3>
+            <p class="m-5">Examen para la certificación de Content Manager, bootcamp Corfo y Talento Digital Chile
+              (2022)</p>
+            <iframe src="./assets/pdf/content-manager.pdf" width="100%" height="500"></iframe>
+          </section>
+          <section class="container" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
+            <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche">
+          </section>
+          <section class="container" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
+            <iframe src="./assets/pdf/whatsapp.pdf" width="100%" height="500"></iframe>
+          </section>
+          <section class="container" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Documentales Travesía, Historia de Concepción</h3>
             <p class="m-5">Producción, guiones y conducción de la serie de documentales Travesía, Historia de
               Concepción, financiado por Fondart, Corporación Cultural Pencopolitana y Gobierno Regional.</p>
@@ -364,6 +346,14 @@
               <p>Travesía, Historia de Concepción, capítulo 1</p>
             </a>
             <img src="./assets/Img/travesia.png" width="100%" height="500" alt="Travesía">
+          </section>
+          <section class="container" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Estudio de Mercado para Instituto del Medio Ambiente
+            </h3>
+            <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
+              Bosque Nativo en las regiones del Bío Bío, Los Ríos y Los Lagos, para el Instituto del Medio Ambiente, año
+              2023. </p>
+            <img src="./assets/Img/idma-corfo.png" width="100%" height="500" alt="Estudio de Mercado IDMA">
           </section>
         </div>
 
