--- a/studies.html
+++ b/studies.html
@@ -22,26 +22,26 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-            <span class="navbar-text text-white ms-3">Pilar García Royo</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-list navbar-nav ms-auto">
-                <li class="navbar-item me-5"><a class="text-menu text-decoration-none" aria-current="page"
-                        href="index.html">Inicio</a>
-                </li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="proyects.html">Proyectos</a></li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="studies.html">Estudios</a></li>
-                <li class="navbar-item me-5"><a class="text-decoration-none" href="jobs.html">Trabajos</a></li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
+        <span class="navbar-text text-white ms-3">Pilar García</span>
+        <span class="ms-1 text-secondary">>></span>
+      </a>
+      <nav aria-label="breadcrumb" class="mt-3">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item active" aria-current="page">Estudios</li>
+        </ol>
+      </nav>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul id="menu" class="navbar-list navbar-nav ms-auto">
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
   <main class="main">
     <header class="icon-tools-section px-5 pt-5">
       <h1 class="toolsTitle text-center">LENGUAJES Y HERRAMIENTAS DIGITALES</h1>
@@ -77,8 +77,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/content-manager.png" class="card-img-top w-50 m-5"
-                alt="Insignia Content Manager">
+              <img src="./assets/Img/content-manager.png" class="card-img-top w-50 m-5" alt="Insignia Content Manager">
             </div>
             <h3 class="card-title">Content Manager</h3>
             <h4 class="card-subtitle">Talento Digital Chile</h4>
@@ -100,8 +99,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/redes-sociales.png" class="card-img-top w-50 m-5"
-                alt="Certificado Redes Sociales">
+              <img src="./assets/Img/redes-sociales.png" class="card-img-top w-50 m-5" alt="Certificado Redes Sociales">
             </div>
             <h3 class="card-title">Estrategias de Ventas en Redes Sociales</h3>
             <h4 class="card-subtitle">Fundación Simón de Cirene y Sence</h4>
@@ -124,8 +122,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/desarrollo-web.png" class="card-img-top w-50 m-5"
-                alt="Certificado Desarrollo Web">
+              <img src="./assets/Img/desarrollo-web.png" class="card-img-top w-50 m-5" alt="Certificado Desarrollo Web">
             </div>
             <h3 class="card-title">Emprendimiento Digital con Tecnología Web</h3>
             <h4 class="card-subtitle">Le Wagon / STEC</h4>
@@ -148,8 +145,7 @@
 
           <div class="card">
             <div class="image-container">
-              <img src="./assets/Img/periodismo.png" class="card-img-top w-50 m-5"
-                alt="Certificado de Periodista">
+              <img src="./assets/Img/periodismo.png" class="card-img-top w-50 m-5" alt="Certificado de Periodista">
             </div>
             <h3 class="card-title">Periodismo y Comunicación Social</h3>
             <h4 class="card-subtitle">Universidad de Chile</h4>
